spacing fixes

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -238,6 +238,7 @@ header {
 .graveyard {
     background-color: #040707;
     margin: 0;
+    padding-top: 100px;
     h3, h4 {
         color: #E4E2FD;
     }
@@ -297,7 +298,7 @@ header {
 
 .portfolio {
     background-color: #040707;
-    padding-top: 16px;
+    padding: 50px 0;
     margin: 0;
 }
 .portfolio-grid-container {
@@ -549,3 +550,19 @@ body {
     -webkit-tap-highlight-color: $theme-dark;
 }
 
+#resume {
+    width: 70%;
+    height: 90vh;
+    margin: 5vh 0;
+    border-radius: 10px;
+
+    @media (max-width: 992px) {
+        height: 70vh;
+        margin: 15vh 0;
+    }
+}
+
+.grid-item {
+    display: flex;
+    justify-content: center;
+}
